--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <ul id="subjects_links">
             <li><a href="Math.html">Math</a></li>
             <li><a href="HTMLssc.html">Social Science</a></li>
-            <li><a href="sCIENCE.html">Science</a></li>
+            <li><a href="Science.html">Science</a></li>
             <li><a href="Hindi.html">Hindi</a></li>
             <li><a href="art.html">Art</a></li>
             <li><a href="Dance.HTML">Dance</a></li>
