--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li><a href="HTMLssc.html">Social Science</a></li>
             <li><a href="Science.html">Science</a></li>
             <li><a href="Hindi.html">Hindi</a></li>
-            <li><a href="art.html">Art</a></li>
+            <li><a href="art.HTML">Art</a></li>
             <li><a href="Dance.HTML">Dance</a></li>
             <li><a href="ENGLISH.HTML">English</a></li>
             <li><a href="French.html">French</a></li>
